# Arena-Tracker

./: .gitignore  .travis.yml  ArenaTracker.icns  ArenaTracker.pro  ArenaTracker.rc  CMakeLists.txt  README.md  arenatracker.qrc  deckcard.h  deckhandler.cpp  deckhandler.h  extra.qrc  gamewatcher.cpp  gamewatcher.h  handcard.h  hscarddownloader.cpp  hscarddownloader.h  logloader.cpp  logloader.h  logworker.cpp  logworker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  movelistwidget.cpp  movelistwidget.h  resizebutton.cpp  resizebutton.h  webuploader.cpp  webuploader.h
Arena/: arenaVersion.json
CardsJson/: cardsVersion.json
Extra/: captureHelper  deckBuilder.py  goldenCrafter.py
HSCards/: deckBuilder.py
HearthArena/: haVersion.json  hearthArena.json
Json/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  AllSets.deDE.json  AllSets.enUS.json  AllSets.esES.json  AllSets.esMX.json  AllSets.frFR.json  AllSets.itIT.json  AllSets.json  AllSets.koKR.json  AllSets.plPL.json  AllSets.ptBR.json  AllSets.ruRU.json  AllSets.zhCN.json  AllSets.zhTW.json  cards.deDE.json  cards.enUS.json  cards.esES.json  cards.esMX.json  cards.frFR.json  cards.itIT.json  cards.jaJP.json  cards.koKR.json  cards.plPL.json  cards.ptBR.json  cards.ruRU.json  cards.thTH.json  cards.zhCN.json  cards.zhTW.json
LightForge/: lfVersion.json  lightForge.json
Premium/: premium.json
Readme/: More.md
Sources/: arenahandler.cpp  arenahandler.h  constants.h  deckcard.cpp  deckcard.h  deckhandler.cpp  deckhandler.h  detachwindow.cpp  detachwindow.h  draftcard.cpp  draftcard.h  drafthandler.cpp  drafthandler.h  draftscorewindow.cpp  draftscorewindow.h  drawcard.cpp  drawcardhandler.cpp  drawcardhandler.h  enemydeckhandler.cpp  enemydeckhandler.h  enemyhandhandler.cpp  enemyhandhandler.h  gamewatcher.cpp  gamewatcher.h  graveyardhandler.cpp  graveyardhandler.h  handcard.cpp  handcard.h  heartharenamentor.cpp  heartharenamentor.h  hearthstatsuploader.cpp  hearthstatsuploader.h  hscarddownloader.cpp  hscarddownloader.h  logloader.cpp  logloader.h  logworker.cpp  logworker.h  main.cpp  mainwindow.cpp  (+34 more)
Sources/Cards/: deckcard.cpp  deckcard.h  draftcard.cpp  draftcard.h  drawcard.cpp  drawcard.h  handcard.cpp  handcard.h  popularcard.cpp  popularcard.h  rngcard.cpp  rngcard.h  secretcard.cpp  secretcard.h  synergycard.cpp  synergycard.h  synergyweightcard.cpp  synergyweightcard.h
Sources/LibSmtp/: smtp.cpp  smtp.h
Sources/LibXls/: brdb.h  config.h  endian.c  endian.h  ole.c  ole.h  xls.c  xls.h  xlsstruct.h  xlstool.c  xlstool.h  xlstypes.h
Sources/Synergies/: cardtypecounter.cpp  cardtypecounter.h  draftdropcounter.cpp  draftdropcounter.h  draftitemcounter.cpp  draftitemcounter.h  keysynergies.cpp  keysynergies.h  layeredsynergies.cpp  layeredsynergies.h  mechaniccounter.cpp  mechaniccounter.h  racecounter.cpp  racecounter.h  schoolcounter.cpp  schoolcounter.h  statsynergies.cpp  statsynergies.h
Sources/Utils/: capturemanager.cpp  capturemanager.h  deckstringhandler.cpp  deckstringhandler.h  libzippp.cpp  libzippp.h  qcompressor.cpp  qcompressor.h
Sources/Widgets/: arrowgraphicsitem.cpp  arrowgraphicsitem.h  attackgraphicsitem.cpp  attackgraphicsitem.h  bombwindow.cpp  bombwindow.h  cardgraphicsitem.cpp  cardgraphicsitem.h  cardlistwindow.cpp  cardlistwindow.h  cardwindow.cpp  cardwindow.h  draftherowindow.cpp  draftherowindow.h  draftitemcounter.cpp  draftitemcounter.h  draftmechanicswindow.cpp  draftmechanicswindow.h  draftscorewindow.cpp  draftscorewindow.h  enemyranking.cpp  enemyranking.h  herographicsitem.cpp  herographicsitem.h  heropowergraphicsitem.cpp  heropowergraphicsitem.h  hoverlabel.cpp  hoverlabel.h  lavabutton.cpp  lavabutton.h  miniongraphicsitem.cpp  miniongraphicsitem.h  movelistwidget.cpp  movelistwidget.h  movetabwidget.cpp  movetabwidget.h  movetreewidget.cpp  movetreewidget.h  moveverticalscrollarea.cpp  moveverticalscrollarea.h  (+14 more)
Sources/Widgets/GraphicItems/: arrowgraphicsitem.cpp  arrowgraphicsitem.h  cardgraphicsitem.cpp  cardgraphicsitem.h  graphicsitemsender.cpp  graphicsitemsender.h  herographicsitem.cpp  herographicsitem.h  heropowergraphicsitem.cpp  heropowergraphicsitem.h  miniongraphicsitem.cpp  miniongraphicsitem.h  weapongraphicsitem.cpp  weapongraphicsitem.h
Synergies/: synergies.json  synergiesNames.json  synergiesVersion.json
Themes/: Themes.json
Version/: version.json
WebEngineView/: webEngineView.json
android-sources/: AndroidManifest.xml
